--- a/CR221376_GUIA4/assets/css/styleToyotaAutos.css
+++ b/CR221376_GUIA4/assets/css/styleToyotaAutos.css
@@ -6,10 +6,14 @@ body {
 }
 
 header {
-    background-color: #030027;
-    color: #aa9554;
-    padding: 10px;
+    background-image: url('../../assets/img/concesionaria/toyota/toyota_expc_dsk.jpg');
+    background-size: cover;
+    background-position: center;
+    color: #fff;
     text-align: center;
+    padding: 20px;
+    width: auto;
+    height: 200px;
 }
 
 nav {
@@ -50,7 +54,41 @@ footer {
 }
 #concesionaria{
     background-color: #98C0F9;
-    color: #fff;
+    color: #ffffff;
     text-align: center;
     padding: 5px;
+}
+section img{
+    width: 100%;
+}
+/*--------------------------------*/
+#contenido {
+    width: 80%;
+    margin: 0px auto;
+    clear: left;
+    overflow: auto;
+    min-width: 650px;
+    /* YA NO REACCIONARA SI LA CAJA ES MAS PEQUEÑA DE 650px*/
+    max-width: 960px;
+    /*YA NO REACCIONARA SI LA CAJA ES MAS GRANDE QUE 960 px*/
+}
+.plan {
+    width: 26.7%;
+    /* 258/960= 27%*/
+    padding: 2%;
+    /* 20/960=2%*/
+    margin: 30px 1.5%;
+    background-color: rgba(255, 255, 255, 0.274);
+    border: solid 1px black;
+    border-radius: 10px;
+    float: left;
+    text-align: justify;
+    box-sizing: border-box;
+}
+
+.plan img {
+    width: 100%;
+}
+hr{
+    color: black;
 }
