--- a/CR221376_GUIA4/assets/css/styleChevroletAutos.css
+++ b/CR221376_GUIA4/assets/css/styleChevroletAutos.css
@@ -124,3 +124,16 @@ h1{
 #contenido2 img{
     width: 100%;
 }
+/* Estilos responsivos */
+@media screen and (max-width: 768px) {
+    .vehiculo {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .vehiculo {
+        width: 100%;
+    }
+}
+
