--- a/CR221376_GUIA4/assets/css/styleChevroletAutosCorvette.css
+++ b/CR221376_GUIA4/assets/css/styleChevroletAutosCorvette.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-image: url('../../assets/img/concesionaria/chevrolet/camaro/Camaro-1920x700.jpg');
+    background-image: url('../../assets/img/concesionaria/chevrolet/corvette/Banner-1920x700-CORVETTE.png');
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -150,4 +150,3 @@ h1{
         width: 100%;
     }
 }
-
